# rust-scraper

./: Cargo.toml  etl-config.yaml
resources/test/: property-finder.frament.html
src/: etl-config.yaml  etl_config_parser.rs  lib.rs  main.rs  page_walker.rs  request_maker.rs  transform_html.rs
src/transform_html/: def.rs  defs.rs  mod.rs
