[package]
name = "declarative-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "transform_html_lib"
path = "src/transform_html.rs"

[[bin]]
name = "transform_html"
path = "src/main.rs"


[dependencies]
regex = "1.10.4"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

